@@ -541,6 +541,20 @@
 #          Default:  256K
 #          Example:  SORT_CHUNK 1M
 
+# Environment name:  COB_SEQ_CONCAT_NAME
+#   Parameter name:  seq_concat_name
+#          Purpose:  Does DD_asgname hold multiple input file names
+#             Type:  boolean
+#          Default:  false
+#          Example:  seq_concat_name = true
+
+# Environment name:  COB_SEQ_CONCAT_SEP
+#   Parameter name:  seq_concat_sep
+#          Purpose:  Character separating file names
+#             Type:  char
+#          Default:  +
+#          Example:  seq_concat_name = '&'
+
 #
 ## File I/O database specfic for OCI and ODBC
 #
